syntax = "proto3";

package agentproxy.dev.rbac;

// A rule that defines a resource type and a key-value pair 
//that can be used to match against a resource.
message Rule {


  // The types of matchers which are supported.
  enum Matcher {
    // The value must be equal to the value in the claims.
    EQUALS = 0;
  }

  message Resource {
    // The ID of the resource.
    // In the case of a tool, this is the name of the tool.
    // In the case of a prompt, this is the name of the prompt.
    // In the case of a resource, this is the name of the resource.
    //
    // If this is not set, it will just match against the server name.
    string id = 1;

    // The name of the target server.
    // If this is not set, it will assume assume the resource can be from any server.
    string target = 2;
    // The type of resource that the rule applies to.
    // This is a string that is used to identify the type of resource.
    // For MCP, the supported types are:
    // - tool
    // - prompt
    // - resource
    // For A2A, the supported types are:
    // - task
    string type = 3;
  }

  // The key to use when finding the value in the claims.
  string key = 1;

  // The value to use when matching the value in the claims.
  string value = 2;

  // The resource ID to use when matching the resource.
  Resource resource = 4;

  // The type of matcher to apply to the value once it is retrieved.
  Matcher matcher = 5;
}

// A configuration that defines a set of RBAC rules for a given listener
message RuleSet {
  // The name of the RBAC configuration.
  string name = 1;
  // The namespace of the RBAC configuration.
  string namespace = 2;
  // The rules that compose the RBAC configuration.
  repeated Rule rules = 3;
}